<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="InvalidNavigation">

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.my_medicos.activities.drawer.drawercontent.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.my_medicos.activities.drawer.drawercontent.notifications.NotificationsFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.my_medicos.activities.drawer.drawercontent.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>